<resources>
    <string name="Pause">Pause</string>
    <string name="Play">Play</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_forget_pwd">Forget password</string>
    <string name="add_camer_invi">ID is invalid. Please try again.</string>
    <string name="add_camer_no_add">The number of screens have already reached maximum!</string>
    <string name="add_camera">Add Camera</string>
    <string name="add_camera_wifi_pwd">Wi-Fi pwd</string>
    <string name="add_camera_wifi_ssid">Wi-Fi name</string>
    <string name="add_device_danale_dialog_more">Select the more stronger wifi,input the correct wifi password,then the device can connect to network quickly. \10Below operation can cause device connection internet fail: \101、Check whether WiFi is switched on, and this setting may cause the device to be disconnected from the Internet. You can temporarily turn off the anti-rubbing network, and then restore the router\'s Settings after the device is successfully connected. \102、If you connect to dual frequency router,please check the device connect to 2.4GHz or 5GHz,please make sure it is 2.4GHz. \103、The device can not support WPA/WPA2 WiFi,please select other WiFi, \104、WiFi.If your family is bridge connection,because bridge connection could cause your network very unstable,we suggest you use non-bridge connection.</string>
    <string name="add_device_danale_dialog_more_title">Wi-Fi Requirements for Equipment</string>
    <string name="add_device_danale_more">Learn more</string>
    <string name="add_device_danale_next">Next</string>
    <string name="add_device_danale_wifi">Fail to get wifi link</string>
    <string name="add_device_danale_wifi1_1">Please connect to your router first</string>
    <string name="add_device_danale_wifi_24g">Just support 2.4GHz</string>
    <string name="add_device_danale_wifi_introduction">Before configuring the network,please ensure the device is power on and in match.</string>
    <string name="add_device_danale_wifi_pass">Please input password</string>
    <string name="add_search_no">Search failed, please try again.</string>
    <string name="add_search_result">Search results</string>
    <string name="add_show_config1">Configure the device to connect to the WiFi network</string>
    <string name="add_show_config1_show">You have a new device that needs to be connected to your home for WiFi use, or you need to reconfigure the WiFi connection of an old device and have remote access to it. Please select this.</string>
    <string name="add_show_config2">Add online camera</string>
    <string name="add_show_config2_show">Your device has been connected to the router, you need to add it to the App, please select this.</string>
    <string name="add_show_config3">The phone connects directly to the device</string>
    <string name="add_show_config3_show">You want to connect your phone directly to your device\'s WiFi, point-to-point, and use it up close, unlike connecting to your router for remote access, select this.</string>
    <string name="add_twodimensioncode">Starting QR code program...</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">007F63A9A96E2E9D0246A5C4AD211D6DBC8502533D9E089CAE86D4A014DCB8D8549149CD4EB309ED7AEBE19B231D259E34C4EBDBEB8BA5D680405759CBEA2812483B0D9B2DA81A62E80A6E1EFA55EFF720</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">0044BF23CAF96AF777BE236F0718FAC5E5C277478F6E1AEF5428EF87CE1E9CDD64425309B129931950BB4DEE1E4269405A248BB252451943106E7AF588D0610E31DC6C23A6910A2B7B4EDE1B793AD083E4384CED00DFD7CE737D54BBBC5A447077</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">000D7DA20E89651AF2DED574C310EE35779E408B5016653A563380002733C1C629B80BE018C52BC4CBB9C5656B31F5B9B5</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">562BF9D452D0C4B49C4A4D4A63F2A4FB</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">000A620A068326E5744A12F2C091AEAC6BD8909F8A1AD8EE1C9434E8A704FB2520</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">0062CC2445BF5E0C00A09C88CF0B5EDC371D175FE958DD9208FDF4ABED5C4834DC7DE54097966DE1F5AB0FED2D5E715F74</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00F1486B659D38472A867755FF7824747A2E8F11C3F191EAFCF2866C6C85B638346863FBD574D3870D0BE43AAF9093AE0ABF16893A637CFD952A88CE4DCB821BB6A41A649535103DBEC7BD05F7768C5662414540439A514B4D67C56F1057D83422</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">008DAD29548EF038F747747D9B45DF29FB2D1E39A0CFBBA23D583CFBD7AC7B1461</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">0015AF4BB02763C71CD0D22349257D19F447BAE317ACCD23941F2884F2AE4AEF7287F869B88D08DA44EC7D87017DA1EE95</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">00595F0905F23A1461F95B3173532B60B1946D507ABFD54EE35A268834C8C25715</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">00FCD3D5400FD41294AB2474B219E68C62EF47EC8FCC1AF53B7EAAA6ADD00BCB54B71C9DCFBB7F2831066A2AAD2238AFCE</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">00C0305C6BD55EBD6D3FFAD484A493136D7556FADDCA40FD1F43C5D1D53D9AB61AA165267729DF58EB905D877D5A3A1588</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">00E9B836476D172EE321984D3A51A6C1B84297B2B2C32399DB053286FA62E98423ECF0B512FF4FA797D086F26D4A738F13</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">000C782E7B60CFAE60458BBF116B91C4C0A21CF88BC38E76994A72D686F5BB9BFBBBB67813A77C88BE8D29D4A3446AA379B59EF6C187D8AF1F78439D358416AF9B1DE4A7FE08C9762A30C901C8BF104C1E</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">009CDAD4667D9475F7CA7BA7EEC0B6B928E6744F0882F891E6E458496A1F54F32899E82853DC7D41EC0EEAB0B63F3DFA51</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">00075E0793D916A968A8DC1886D325B67E388E0121C99D739E1E7D22CD9DDA313BAC547A0CEC3EF9C1934AFED2F4D09664B7E6F00540C41259FE81D2665804BD68</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">003A9E9B9FFE3B66D83F891CA693D594A13C9C66B18EF5C0A5BAB88982825BED11D02DAC709E9E8D4E2CB8F67004AF2175</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">00DEAACACE3386BBE6720DBD2E7E61EF637055E39FEBDC0021827BB2849A9231E0</string>
    <string name="agc_836CE23119A6E21FA622B66B25341D1D32735FAA2839B33D60C4D59B7AD62151">00922CA756421231A127759A607E38965936F94F62165A653CFAE13E57D6B9B16E93502193899C83E53F3C8BB9807E8AC38BBECFC917663E8FC9D39CEF8FC6E1E1</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">0089AED1F59A59EF31C37D989E27E3EBC6E1ADD9B9437003A0B9856035D7A142464DC71663B2A5852130B2032FEC155532</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">00378D06784E715ACCAA34D69937335AC6BF903C7EA9AE0E8EBA2709D308369369C80D877322373CA964F0567B0E0D2C51</string>
    <string name="agc_8EC943399EB9730C69A7B8E4E46D24911E8F900AC2F52A3DF251327694CD8EFA">00488147CE2FAC28FD7F36BFEC3C343DFD0305287196537314DC5A1FA13F891D185DCE46F28241B2D62DC80CAFA11A96633D4F4C4AE601C9D4CBC2B067E69C6A2B</string>
    <string name="agc_943F28EFD067BBA193A2BABED8B2DCC2AB346B483A7A7FFE4EEF97B6A6E8E95B">00301CC8D1C6A8439873D76518C633A9EB45B30AC8F960F742CFD64FED43D9EEFEF0688356F99747620C822C6FD7459599</string>
    <string name="agc_B1D468BFE76734080F76B2B7AFCD4E74561AE0CB6D3E48BC35857EFB95EA0BA0">004634A7B73121168E4C23278012CABEEB02C34F79D63B04F8F445C86B65EEBA054D3F3D80978A2B4DF266A54CB0D17011FBD228B69F1153DC0F26F788E48792B5</string>
    <string name="agc_B306EDA810E24A85B9E96B29457CBA22E7AB7624F9F2D241D325EAA1B74DAB4B">000AD5CC178F1F46A6BC80CCA1E2B21EED055F0493D6F1320390311BC4EFA19D72459BD1CE01EA4956262FBA6DBDDEE6D62E0CDA9125E945447378C791764BB673F2F348A85815900D1495041C0F6E9ED8F33212271E54CB212ED3FC62F5C5FA51F19257F1094BA8024C8AF5E8544F132A</string>
    <string name="alarm_next_day">后一月</string>
    <string name="alarm_previous_day">前一月</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="door_white_list_edit">Edit</string>
    <string name="forget_pwd">Forget password？</string>
    <string name="friday">五</string>
    <string name="get_validate_code">Code</string>
    <string name="hint_input_account">Please enter mobile number / email</string>
    <string name="hint_pwd">Please input a password</string>
    <string name="hint_validate_code">Please enter the verification code</string>
    <string name="main_file_photo">Photo</string>
    <string name="main_file_video">Video</string>
    <string name="monday">一</string>
    <string name="new_psw">Creat New Password:</string>
    <string name="ngetwifi_show2">Ensure that the router is 2.4G and the password is entered correctly, otherwise the device will not be able to successfully distribute the network.</string>
    <string name="old_psw">Old Password:</string>
    <string name="pwd_info_1">1.Password length must be between 4 and 31 digits.</string>
    <string name="pwd_info_2">2.For your privacy and security, it is strongly recommended to change to letter + number for highly complex passwords, and letters should be case-sensitive.</string>
    <string name="pwd_info_title">instructions：</string>
    <string name="saturday">六</string>
    <string name="setting_user">User</string>
    <string name="sunday">日</string>
    <string name="sure_new_psw">Confirm New Password:</string>
    <string name="thursday">四</string>
    <string name="tuesday">二</string>
    <string name="use_setting_show_psw">Show password</string>
    <string name="wednesday">三</string>
</resources>