<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="#fff" android:paddingBottom="10dp" android:layout_width="224dp" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="#f0dc143c" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="36dp">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/lin_previous_day" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="10dp">
                <ImageView android:layout_width="12dp" android:layout_height="16dp" android:src="@drawable/icon_next"/>
                <TextView android:textSize="11sp" android:textColor="#fff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6dp" android:text="@string/alarm_previous_day"/>
            </LinearLayout>
            <TextView android:textColor="#fff" android:gravity="center" android:id="@+id/tv_day_year" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="2019-05" android:layout_centerInParent="true"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/lin_next_day" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="10dp" android:layout_alignParentRight="true">
                <TextView android:textSize="11sp" android:textColor="#fff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6dp" android:text="@string/alarm_next_day"/>
                <ImageView android:layout_width="12dp" android:layout_height="16dp" android:src="@drawable/arrow1"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="30dp">
            <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/sunday" android:layout_weight="1"/>
            <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/monday" android:layout_weight="1"/>
            <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/tuesday" android:layout_weight="1"/>
            <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/wednesday" android:layout_weight="1"/>
            <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/thursday" android:layout_weight="1"/>
            <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/friday" android:layout_weight="1"/>
            <TextView android:textStyle="bold" android:textColor="#fff" android:gravity="center" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/saturday" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView android:id="@+id/rcv_calendar" android:background="#fff" android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
