<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@mipmap/qh_allbg" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/Relative_top" android:background="@color/color_H_Main" android:layout_width="match_parent" android:layout_height="50dp">
        <Button android:id="@+id/wifi_cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/button_back_style1"/>
        <com.shix.shixipc.view.MyTextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_black" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:id="@+id/tv_camera_setting" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:maxWidth="150dp" android:text="@string/setting_user" android:scrollHorizontally="true" android:singleLine="true" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_centerInParent="true" android:marqueeRepeatLimit="marquee_forever"/>
        <Button android:id="@+id/wifi_ok" android:visibility="gone" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/button_done_style"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/background_listbg1" android:padding="5dp" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/all_item_margleftright" android:layout_marginTop="10dp" android:layout_marginRight="@dimen/all_item_margleftright">
        <LinearLayout android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:gravity="center" android:padding="2dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/old_psw" android:layout_weight="2"/>
            <EditText android:id="@+id/edt_current_password" android:background="@drawable/bg_border1" android:longClickable="false" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:singleLine="true" android:maxLength="63" android:layout_weight="5" android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/new_psw" android:layout_weight="2"/>
            <EditText android:id="@+id/edt_new_password" android:background="@drawable/bg_border1" android:longClickable="false" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:singleLine="true" android:maxLength="63" android:layout_weight="5" android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:text="@string/sure_new_psw" android:layout_weight="2"/>
            <EditText android:id="@+id/edt_confirm_password" android:background="@drawable/bg_border1" android:longClickable="false" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="5dp" android:singleLine="true" android:maxLength="63" android:layout_weight="5" android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingLeft="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
            <CheckBox android:id="@+id/show_psw_cb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:button="@drawable/selector_pw_checkbox"/>
            <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/use_setting_show_psw"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:textColor="@color/color_white" android:id="@+id/update_password_btn" android:background="@drawable/btn_blue_selector" android:padding="5dp" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="@dimen/all_btn_margleftright" android:layout_marginTop="18dp" android:layout_marginRight="@dimen/all_btn_margleftright" android:layout_marginBottom="10dp" android:text="@string/done"/>
    <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="30dp" android:layout_marginRight="10dp" android:text="@string/pwd_info_title"/>
    <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/pwd_info_1"/>
    <TextView android:textSize="@dimen/all_other_text_size" android:textColor="@color/color_qh_bom_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/pwd_info_2"/>
</LinearLayout>
