<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center" android:id="@+id/Relative_top" android:background="@color/color_H_Main" android:layout_width="match_parent" android:layout_height="50dp">
        <Button android:id="@+id/back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/button_back_style1"/>
        <com.shix.shixipc.view.MyTextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_black" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:id="@+id/textview_add_camera" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:maxWidth="120dp" android:text="@string/add_camera" android:scrollHorizontally="true" android:singleLine="true" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_centerInParent="true" android:marqueeRepeatLimit="marquee_forever"/>
        <ImageButton android:background="#00000000" android:padding="5dp" android:visibility="invisible" android:layout_width="35dp" android:layout_height="30dp" android:layout_marginRight="10dp" android:src="@mipmap/qh_scan" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ImageView android:layout_gravity="center_horizontal" android:id="@+id/ivDevice" android:layout_width="wrap_content" android:layout_height="140dp" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:src="@mipmap/config_wifi_h" android:scaleType="centerInside"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/selector_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginRight="15dp">
        <ImageView android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="10dp" android:src="@mipmap/n_soud_ssid"/>
        <EditText android:textSize="15sp" android:gravity="center_vertical" android:id="@+id/edit_wify_name" android:background="#00000000" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="match_parent" android:layout_height="44dp" android:maxLines="1" android:maxLength="30"/>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/selector_input" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:layout_marginRight="15dp">
        <ImageView android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="10dp" android:src="@mipmap/n_soud_pwd"/>
        <EditText android:textSize="15sp" android:gravity="center_vertical" android:id="@+id/edit_wify_pass" android:background="@null" android:paddingLeft="7dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="44dp" android:hint="@string/add_device_danale_wifi_pass" android:maxLines="1" android:maxLength="30" android:layout_weight="1" android:inputType="textPassword"/>
        <ImageView android:id="@+id/edit_wify_pass_eye" android:paddingLeft="5dp" android:paddingRight="10dp" android:layout_width="43dp" android:layout_height="12dp" android:src="@mipmap/btn_eye"/>
    </LinearLayout>
    <TextView android:textSize="13sp" android:textColor="@color/z4" android:gravity="center" android:paddingLeft="15dp" android:paddingRight="15dp" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/add_device_danale_wifi1_1"/>
    <TextView android:textSize="13sp" android:textColor="@color/z4" android:gravity="center" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/add_device_danale_wifi_introduction"/>
    <TextView android:textSize="13sp" android:textColor="@color/z4" android:gravity="center" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/ngetwifi_show2"/>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="30dp" android:layout_marginLeft="15dp" android:layout_marginTop="10dp" android:layout_marginRight="15dp">
            <TextView android:textSize="13sp" android:textColor="@color/red" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_device_danale_wifi_24g"/>
            <View android:layout_width="15dp" android:layout_height="wrap_content"/>
            <TextView android:textSize="13sp" android:textColor="@color/color_n_buttom_select_text_color" android:gravity="center" android:id="@+id/add_more" android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/add_device_danale_more"/>
        </LinearLayout>
        <TextView android:textSize="15sp" android:textColor="@color/color_white" android:gravity="center" android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/btn_next" android:background="@drawable/btn_green_selector" android:layout_width="300dp" android:layout_height="45dp" android:layout_marginTop="5dp" android:layout_marginBottom="20dp" android:text="@string/add_device_danale_next"/>
    </LinearLayout>
</LinearLayout>
