<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@mipmap/qh_allbg" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/Relative_top" android:background="@color/color_H_Main" android:layout_width="match_parent" android:layout_height="50dp">
        <Button android:id="@+id/back" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="@style/button_back_style1"/>
        <com.shix.shixipc.view.MyTextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/color_white" android:ellipsize="marquee" android:layout_gravity="center_vertical" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:maxWidth="150dp" android:text="@string/forget_pwd" android:scrollHorizontally="true" android:singleLine="true" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:layout_centerInParent="true" android:marqueeRepeatLimit="marquee_forever"/>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/selector_input" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="42dp" android:layout_marginTop="40dp" android:layout_marginRight="43dp">
        <EditText android:textSize="13sp" android:textColor="@color/z2" android:textColorHint="@color/z2" android:id="@+id/etAccount" android:background="@null" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="19.5dp" android:hint="@string/hint_input_account" android:maxLines="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/selector_input" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="42dp" android:layout_marginTop="10dp" android:layout_marginRight="43dp">
        <EditText android:textSize="13sp" android:textColor="@color/z2" android:textColorHint="@color/z2" android:id="@+id/etPwd" android:background="@null" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="20dp" android:hint="@string/hint_pwd" android:maxLines="1" android:layout_weight="1" android:inputType="textPassword"/>
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/ivShowPwd" android:padding="3dp" android:layout_width="20dp" android:layout_height="match_parent" android:layout_marginRight="20dp" android:src="@mipmap/btn_eye"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@drawable/selector_input" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="42dp" android:layout_marginTop="10dp" android:layout_marginRight="43dp">
        <EditText android:textSize="13sp" android:textColor="@color/z2" android:textColorHint="@color/z2" android:id="@+id/etCode" android:background="@null" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="20dp" android:hint="@string/hint_validate_code" android:maxLines="1" android:layout_weight="1"/>
        <View android:layout_gravity="center_vertical" android:background="@color/z1" android:layout_width="0.5dp" android:layout_height="20dp" android:layout_marginLeft="9.5dp" android:alpha="0.2"/>
        <TextView android:textSize="13sp" android:textColor="#b3000000" android:gravity="center_vertical" android:id="@+id/tvGetCode" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="19dp" android:layout_marginRight="20dp" android:text="@string/get_validate_code" android:alpha="0.7"/>
    </LinearLayout>
    <TextView android:textSize="15sp" android:textColor="@color/color_white" android:gravity="center" android:id="@+id/tvReset" android:background="@drawable/btn_blue_selector" android:layout_width="match_parent" android:layout_height="43dp" android:layout_marginLeft="42dp" android:layout_marginTop="15dp" android:layout_marginRight="43dp" android:text="@string/done"/>
</LinearLayout>
